Fix top menu left padding covering logo issue

--- a/JabbR/Content/themes/default/Chat.css
+++ b/JabbR/Content/themes/default/Chat.css
@@ -596,7 +596,7 @@ li.user.typing .gravatar {
 }
 #tabs {
   padding: 0;
-  left: 98px;
+  left: 100px;
   right: 0;
   position: absolute;
   z-index: 200;
